name:                advent2015hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/advent2015hs#readme
license:             BSD3
license-file:        LICENSE
author:              Shaun P. Lee
maintainer:          example@example.com
copyright:           2016 Shaun P. Lee
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AdventCoins
                     , AlmostLisp
                     , DeliveringPresents
                     , LiteBrite
                     , NaughtyAndNice
                     , Wrapping
  build-depends:       aeson >= 0.11.2.1
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers >= 0.5.7.1
                     , cryptonite
                     , lens >= 4.14
                     , lens-aeson >= 1.0.0.5
                     , parsec
                     , parsers
                     , random >= 1.1
                     , text
                     , trifecta
                     , utf8-string >= 1.0.1.1
                     , vector
                     , wreq
  default-language:    Haskell2010

executable advent2015hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       advent2015hs
                     , base
                     , lens >= 4.14
  default-language:    Haskell2010

test-suite advent2015hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       advent2015hs
                     , base
                     , lens >= 4.14
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent2015hs
